--- a/Task-manager-Ts/tsconfig.json
+++ b/Task-manager-Ts/tsconfig.json
@@ -2,8 +2,10 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "types": ["node", "express"],
     "lib": ["ES2020"],
-    "outDir": "./dist", 
+    "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
